# plutus-App

./: README.md  cabal.project  plinth-template.cabal
.github/: copilot-instructions.md
app/: Main.hs
src/: AuctionMintingPolicy.hs  AuctionValidator.hs
