cabal-version:   3.0
name:            plinth-template
version:         0.1.0.0
license:
build-type:      Simple
extra-doc-files: README.md

common options
  ghc-options: -Wall
  default-language: Haskell2010

library scripts
  import:         options
  hs-source-dirs: src
  exposed-modules:
    AuctionMintingPolicy
    AuctionValidator

  build-depends:
    , base
    , plutus-core ^>=1.54.0.0
    , plutus-ledger-api ^>=1.54.0.0
    , plutus-tx ^>=1.54.0.0
    , plutus-tx-plugin ^>=1.54.0.0



executable Main
  import:           options
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , containers
    , plutus-core ^>=1.54.0.0
    , plutus-ledger-api ^>=1.54.0.0
    , plutus-tx ^>=1.54.0.0
    , plutus-tx-plugin ^>=1.54.0.0
    , scripts
    , serialise